--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -243,27 +243,11 @@ nav:
     - Catalogs:
         - CRD Catalog: 
             - Overview - CRD Catalog: catalogs/kubernetes-crds.md
-            - API: catalogs/crds/api_types.md
-            - APIPolicy: catalogs/crds/apipolicy_types.md
-            - HTTPRoute: catalogs/samples/http-route.md
-            - GraphQL Route: catalogs/crds/gql_routes_types.md
-            - GRPCRoute: catalogs/samples/grpc-route.md
-            - Authentication: catalogs/crds/authentication_types.md
-            - Backend: catalogs/crds/backend_types.md
-            - BackendJWT: catalogs/crds/backendjwt_types.md
-            - Interceptor Service: catalogs/crds/interceptorservice_types.md
-                # - Overview: catalogs/api-policy.md
-                # - CORS: catalogs/cors.md
-                # - Interceptors: catalogs/interceptors.md
-            - RateLimitPolicy: catalogs/crds/ratelimitpolicy_types.md
-            # - Resolved JWT Issuer: catalogs/crds/resolvedJWTIssuer.md
-            - Scope: catalogs/crds/scope_types.md
-            - Token Issuer: catalogs/crds/tokenIssuer_types.md
+            - RoutePolicy: catalogs/crds/routepolicy_types.md
+            - RouteMetadata: catalogs/crds/routemetadata_types.md
             - Subscription: catalogs/crds/subscription_types.md
             - Application: catalogs/crds/application_types.md
             - Application Mapping: catalogs/crds/application_mapping_types.md
-            - AI Provider: catalogs/crds/aiprovider_types.md
-            - AI Rate Limit Policy: catalogs/crds/airatelimitpolicy_types.md
                 # - Overview: catalogs/rate-limit-policy.md
                 # - API Level: catalogs/ratelimit-api.md
                 # - Resource Level: catalogs/ratelimit-resource.md
