Update catalog APIs

--- a/en/docs/catalogs/config-generator-catalogs/artifact-deployer-api.yaml
+++ b/en/docs/catalogs/config-generator-catalogs/artifact-deployer-api.yaml
@@ -102,7 +102,7 @@ components:
           example: "api.apk-conf"
         definitionFile:
           type: string
-          description: api definition (OAS/Graphql/WebSocket)
+          description: api definition (OAS/Graphql/gRPC)
           format: binary
           example: "openapi.yaml"
 
