Update catalog APIs

--- a/en/docs/catalogs/config-generator-catalogs/artifact-deployer-api.yaml
+++ b/en/docs/catalogs/config-generator-catalogs/artifact-deployer-api.yaml
@@ -6,7 +6,7 @@ info:
     This API is used to generate K8s resources for an API.
   version: 1.1.0
 servers:
-  - url: https://api.am.wso2.com/apk/1.1.0
+  - url: https://api.am.wso2.com:9095/api/deployer/1.1.0
 paths:
   /apis/deploy:
     post:
@@ -102,7 +102,7 @@ components:
           example: "api.apk-conf"
         definitionFile:
           type: string
-          description: api definition (OAS/Graphql/WebSocket)
+          description: api definition (OAS/Graphql/gRPC)
           format: binary
           example: "openapi.yaml"
 
