--- a/en/docs/catalogs/config-generator-catalogs/artifact-generator-api.yaml
+++ b/en/docs/catalogs/config-generator-catalogs/artifact-generator-api.yaml
@@ -1,12 +1,12 @@
 ---
 openapi: 3.0.1
 info:
-  title: WSO2 API Platform for Kubernetes - Configuration generator API
+  title: WSO2 Kubernetes Gateway - Configuration Generator API
   description: |
     This document specifies a **RESTful API** for WSO2 **APK** - **Runtime Component**.
   version: 1.1.0
 servers:
-  - url: https://api.am.wso2.com/apk/1.1.0
+  - url: https://api.am.wso2.com:9095/api/configurator/1.1.0
 paths:
   /apis/generate-configuration:
     post:
@@ -90,7 +90,7 @@ components:
           example: "api.apk-conf"
         definitionFile:
           type: string
-          description: api definition (OAS/Graphql/WebSocket)
+          description: api definition (OAS/Graphql/gRPC)
           format: binary
           example: "openapi.yaml"
         apiType:
@@ -102,7 +102,7 @@ components:
       properties:
         definition:
           type: string
-          description: api definition (OAS/Graphql/WebSocket)
+          description: api definition (OAS/Graphql/gRPC)
           format: binary
           example: "openapi.yaml"
         url:
